# advanced-same-machine-interprocess-communication-protocol-suite

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cpp/: .dockerignore  .gitignore  CMakeLists.txt  README.md
cpp/benchmark_tests/: CMakeLists.txt  main.cpp
cpp/benchmark_tests/rmp/: inMemory.hpp  notificationBench.cpp  rmpBench.cpp
cpp/benchmark_tests/tp/: inMemory.hpp  systemBench.cpp  tpBench.cpp
cpp/benchmark_tests/traits/posix/: multicastUdpNotificationBench.cpp  robustFutexBench.cpp
cpp/build_env/: Dockerfile
cpp/doc_gen/: CMakeLists.txt  Doxyfile.in
cpp/src/: CMakeLists.txt
cpp/src/include/toroni/: exception.hpp  exclusiveLock.hpp  ref.hpp
cpp/src/include/toroni/rmp/: byteRingBuffer.hpp  copyConfirmHandler.hpp  reader.hpp  readerInfo.hpp  readerWithBackpressure.hpp  stream.hpp  writer.hpp
cpp/src/include/toroni/rmp/detail/: msgHeader.hpp  positionOpt.hpp  util.hpp
cpp/src/include/toroni/tp/: asyncWriter.hpp  channelReader.hpp  reader.hpp  readerInfo.hpp  topicMsgBinary.hpp
cpp/src/include/toroni/tp/detail/: topicMsgBinaryDeserializer.hpp  topicMsgBinarySerializer.hpp
cpp/src/include/toroni/traits/concurrent/: mpscMessageQueue.hpp  serialWorkQueue.hpp
cpp/src/include/toroni/traits/posix/: multicastUdpNotification.hpp  robustProcMutex.hpp  sharedMemory.hpp
cpp/system_tests/: CMakeLists.txt
cpp/system_tests/burst/: CMakeLists.txt  agent.cpp  bench-cell.sh  bench-table.sh  config.hpp  log.hpp  robust-reader.sh  robust-writer.sh  setup-agent.sh  stress-no-expire.sh
cpp/unit_tests/: CMakeLists.txt  main.cpp
cpp/unit_tests/rmp/: CMakeLists.txt  byteRingBufferTest.cpp  byteRingBufferTest.hpp  readerInfoTest.cpp  readerInfoTest.hpp  readerWriterTest.cpp  readerWriterTest.hpp
cpp/unit_tests/tp/: CMakeLists.txt  asyncWriterTest.cpp  asyncWriterTest.hpp  readerTest.cpp  readerTest.hpp
cpp/unit_tests/tp/detail/: CMakeLists.txt  topicMsgTest.cpp
cpp/unit_tests/traits/: CMakeLists.txt
cpp/unit_tests/traits/concurrent/: CMakeLists.txt  mpscMessageQueueTest.cpp  serialWorkQueueTest.cpp
cpp/unit_tests/traits/posix/: CMakeLists.txt  multicastUdpNotificationTest.cpp  robustProcMutexTest.cpp  sharedMemoryTest.cpp
interop-tests/: CMakeLists.txt  cpp-java.Dockerfile  cpp-java.sh  perf.sh
java/: .gitignore  README.jProfiler.md  README.md  pom.xml
java/.devcontainer/: devcontainer.json
java/benchmark_tests/: pom.xml
java/build_env/: Dockerfile
java/system_tests/: pom.xml
java/toroni/: pom.xml
java/toroni/src/main/java/toroni/rmp/: BackPressureCallback.java  ByteRingBuffer.java  CopyConfirmCallback.java  CopyConfirmHandler.java  ReadCallback.java  Reader.java  ReaderInfo.java  ReaderInfoInfo.java  ReaderWithBackpressure.java  Writer.java
java/toroni/src/main/java/toroni/tp/: AsyncWriter.java  ChannelReader.java  MpscMessageQueue.java  Reader.java  ReaderInfo.java  SerialWorkItemQueue.java
java/toroni/src/main/java/toroni/traits/: MulticastUdpNotification.java  PosixSharedMemoryFactory.java  PthreadRobustMutex.java  RobustMutex.java  SharedMemory.java
java/toroni/src/test/java/toroni/rmp/: ByteRingBufferTest.java  ReaderInfoTest.java  ReaderWriterTest.java
java/toroni/src/test/java/toroni/system_tests/: Agent.java  AgentStats.java  Config.java  (+5 more)
(+73 files in other folders)
